# lutsia-copiclin

./: .gitignore  LICENSE  Makefile  PROJECT.md  PROJECT_CLOSURE_2026-05-14.md  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/desktop/: main.py
backend/app/: desktop.py  main.py  paths.py
backend/app/schemas/: clinical_note.py  core.py
backend/app/services/: audio_storage.py  codex_account.py  memory_store.py  note_generation.py  runtime_checks.py  setup_status.py  transcription.py  whisper_models.py
backend/app/static/: index.html
backend/app/static/assets/: index-B8Dq1rKT.js  index-DdvjpTSE.js  index-Dkztbe1E.css  index-fM6uyiiD.js  index-iTP73DmY.css  index-lHha6FP3.css
backend/app/templates/: clinical_safety_prompt.md
backend/tests/: conftest.py  test_api_flow.py  test_clinical_note_schema.py  test_codex_account.py  test_setup_flow.py
docs/: AI_PROVIDER_STRATEGY.md  ARCHITECTURE.md  CODEX_ACCOUNT_RESEARCH.md  DECISIONS.md  INITIAL_ARCHITECTURE_PLAN.md  INSTALL.md  LEGAL_NOTES.md  MODEL_PROVIDERS.md  PRIVACY.md  SECURITY.md  TROUBLESHOOTING.md
docs/adr/: 0001-desktop-shell.md  0002-packaging.md  0003-local-encryption.md  0004-ai-provider-auth.md  0005-transcription.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
scripts/: bootstrap_dev.sh  bootstrap_local_ai.sh  check_runtime.py  dev_backend.sh  download_whisper_model.py
