[project]
name = "lutsia-copiclin"
version = "0.1.0"
description = "LUTSIA CopiClin - local-first clinical documentation copilot"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic>=2.7",
  "sqlmodel>=0.0.21",
  "keyring>=25.0",
  "cryptography>=42.0",
  "pywebview>=5.0",
  "imageio-ffmpeg>=0.5",
  "python-multipart>=0.0.12",
  "platformdirs>=4.3",
  "faster-whisper>=1.1",
  "soundfile>=0.12",
  "numpy>=1.26",
]

[project.scripts]
lutsia-copiclin-api = "app.main:run_dev"
lutsia-copiclin-desktop = "app.desktop:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "httpx>=0.27"]
local-ai = ["sounddevice>=0.5"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]

[tool.ruff]
line-length = 100

[tool.setuptools.package-data]
app = ["static/**/*"]

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]
